Improved the introduction, wrote the overall conclusions

--- a/IBM_DS0720EN/capstone_03.ipynb
+++ b/IBM_DS0720EN/capstone_03.ipynb
@@ -21,6 +21,8 @@
     "\n",
     "Therefore, in the remainder we shall analyze whether the 'HEAT/HOT WATER' comlaints reported in 'BRONX' have obvious relationship with any particular house characteristics.\n",
     "\n",
+    "The rest of the report is organized as follows. First, the data sets are described. Then, the initial data set exploration and cleaning will be performed. Next, the 311 and PLUTO data frames will be combined into a single one. Further, we will proceed with the analysis of how the complaint types in 'BRONX' depend on the house charasteristics (properties). Finally we will summarize our findings in the conclusions.\n",
+    "\n",
     "# The data sets\n",
     "The 311 dataset is already well known to us as it was used to answer Questions 1 & 2, therefore it does not require any special introduction. \n",
     "\n",
@@ -2559,9 +2561,9 @@
     "Therefore the approach we shall take is to be more general. We shall consider the complain type as the target variable we are to predict from the available house features. Then we can perform several type of analysis to identify the features that are most significant for predicting the complain types. These exact features will be then the ones that determine relationship of the complain type, and the 'HEAT/HOT WATER' comlaints in particular, with the house features.\n",
     "\n",
     "In the following we will perform the three types of analysis to identify such features:\n",
-    "1. Univariate Selection\n",
-    "2. Feature Importance\n",
-    "3. Correlation Matrix\n",
+    "1. **Univariate Selection**\n",
+    "2. **Feature Importance**\n",
+    "3. **Correlation Matrix**\n",
     "\n",
     "Before the methods will be applied we shall do some preprocessing of the data set and after the analysis will be done we will draw the conclusions on the types of house features highly related to the 'HEAT/HOT WATER' comlaints.\n",
     "\n",
@@ -3679,7 +3681,6 @@
     "   1. Mutual Information Classifier\n",
     "2. Feature Importance, with:\n",
     "   1. Extra Trees Classifier\n",
-    "   2. Decision Tree Classifier\n",
     "3. Correlation Matrix\n",
     "\n",
     "First let us summarize the top 5 significant features found by each of the approaches:"
@@ -4094,7 +4095,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusions"
+    "# Conclusions\n",
+    "In this investigation we have attempted to answer the following question:\n",
+    "\n",
+    "> Do the 'HEAT/HOT WATER' complaints reported in 'BRONX' have an obvious relationship with any particular characteristic or characteristic of the Houses?\n",
+    "\n",
+    "We begain with loading the two provided data sets: 311 and PLUTO where the first contains the complaints and the second the house characteristics, also called properties or features. After an initial data exploration and cleaning we have proceeded with joining the data sets in a single data frame which resulted of about `20`% loss of data.\n",
+    "\n",
+    "Next, we went on with answering the aforementioned question. However, because the analysis of the 'HEAT/HOT WATER' complaint house properties could be missleading (since it could easily be influenced by the general common properties of the houses in the 'BRONX' borough) we have re-formulated the question into a more general and more proper one, namely:\n",
+    "\n",
+    "> What are the most significant house features in 'BRONX' that explain the variability of the complaint types.\n",
+    "\n",
+    "In other words we have converted the original question into a feature selection problem for predicting the complaint types based on the house properties. The subsequent analysis was done employing the three next methods:\n",
+    "\n",
+    "1. Univariate Selection, with:\n",
+    "   1. Mutual Information Classifier\n",
+    "2. Feature Importance, with:\n",
+    "   1. Extra Trees Classifier\n",
+    "3. Correlation Matrix Analysis\n",
+    "\n",
+    "It turned out that the top 5 features indicated by all of the three methods had only two common features:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Commonly identified important features are:  {'YCoord', 'XCoord'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Commonly identified important features are: ', imp_features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, there were four features common to at least 2 our of 3 top 5 lists:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['XCoord', 'YCoord', 'BldgArea', 'ResArea']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(imp_fe_cnts.index[imp_fe_cnts >= 2].to_list())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to assess the quality of the recommended features, we have taken on the visualization techniques and used:\n",
+    "\n",
+    "1. 'XCoord' by 'YCoord' scatter plot with complaint types\n",
+    "2. 'XCoord' and 'YCoord' complaint types distribution plots\n",
+    "3. 'BldgArea'/'ResArea' values per complaint type box plots\n",
+    "\n",
+    "The visualizations has revealed no clustering or specific patterns that would indicate the high quality of the selected features. Moreover, the correlation analysis has also indicated a near zero correlation values between the comlaint type and all of the house properties.\n",
+    "\n",
+    "From the analysis above we concluded that, even though we can select the most significant house features, we can not guarantee their quality. In other words, even though these features are most predictive compared to the others, their predictive power sistill very small. However, this conclusion is not complete as it is not supported by any quantifiable data. It is therefore forther recommended to either:\n",
+    "\n",
+    "1. Check the features quality by building the complaint type prediction model using the recommended four features and then training and evaluating it.\n",
+    "2. Perform the Principle Component Analysis (PCA) and select the features in the transformed space that explain the most of the target variable variability. These features then are to be used for building the complaint type prediction model."
    ]
   },
   {
