--- a/IBM_DS0720EN/capstone_03.ipynb
+++ b/IBM_DS0720EN/capstone_03.ipynb
@@ -4170,7 +4170,7 @@
     "\n",
     "The visualizations has revealed no clustering or specific patterns that would indicate the high quality of the selected features. Moreover, the correlation analysis has also indicated a near zero correlation values between the comlaint type and all of the house properties.\n",
     "\n",
-    "From the analysis above we concluded that, even though we can select the most significant house features, we can not guarantee their quality. In other words, even though these features are most predictive compared to the others, their predictive power sistill very small. However, this conclusion is not complete as it is not supported by any quantifiable data. It is therefore forther recommended to either:\n",
+    "From the analysis above we concluded that, even though we can select the most significant house features, we can not guarantee their quality. In other words, even though these features are most predictive compared to the others, their predictive power may still be very small. However, this conclusion is not complete as it is not supported by any quantifiable data. It is therefore further recommended to:\n",
     "\n",
     "1. Check the features quality by building the complaint type prediction model using the recommended four features and then training and evaluating it.\n",
     "2. Perform the Principle Component Analysis (PCA) and select the features in the transformed space that explain the most of the target variable variability. These features then are to be used for building the complaint type prediction model."
