Minor text fixes

--- a/IBM_DS0720EN/capstone_03.ipynb
+++ b/IBM_DS0720EN/capstone_03.ipynb
@@ -1857,7 +1857,7 @@
     "occur_cnt.reset_index(level=0, inplace = True)\n",
     "occur_cnt.rename(columns={0:'count'}, inplace = True)\n",
     "\n",
-    "# We add the counts to the table with mulriple occurances, sort \n",
+    "# We add the counts to the table with multiple occurances, sort \n",
     "# by count, and select those adresses that occur at least twice\n",
     "dupl_result = pd.merge(mult_occur, occur_cnt)\n",
     "dupl_result.sort_values(by = ['count', 'Address'], axis=0, inplace = True, ascending = False)\n",
